# spriff

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GUIDANCE.md  LICENSE  PROTECTION.md  README.md  SECURITY.md  SKILL.md  WISDOM.md  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: BOARD-GRAMMAR.md  MIGRATION.md  OPERATING.md  attribution-trailers.md
examples/: example-collab.toml
hooks/: prepare-commit-msg
src/: board.rs  config.rs  main.rs  names.rs  nudge.rs  paths.rs  pending.rs  registry.rs  state.rs  util.rs  watcher.rs
tests/: hooks.rs  rendezvous.rs
